Added spectra comments to results and added all introduction references.

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -9,6 +9,61 @@
   pages = {619--628}
 }
 
+@article{dolg_2000,
+  volume = {1},
+  journal = {NIC Series},
+  author = {Dolg, Michael},
+  title = {Effective core potentials},
+  year = {2000},
+  pages = {479-508}
+}
+
+@article{gresh_1978,
+  volume = {49},
+  journal = {Theoret. Chim. Acta.},
+  author = {Gresh, Nohad and Pullman, Alberte},
+  title = {On the Use of Pseudopotentials in Molecular Calculations},
+  year = {1978},
+  pages = {283-294}
+}
+
+@article{hellmann_1935,
+  volume = {3},
+  number = {61},
+  journal = {J. Chem. Phys.},
+  author = {Hellmann, H.},
+  title = {A New Approximation Method in the Problem of Many Electrons},
+  year = {1935}
+}
+
+@article{gombas_1935,
+  volume = {94},
+  journal = {Z. Phys.},
+  author = {Gomb\'as, P.},
+  year = {1935},
+  pages = {473-488}
+}
+
+@article{dilabio_2008,
+  volume = {455},
+  journal = {Chem. Phys. Lett.},
+  author = {DiLabio, Gino A.},
+  title = {Accurate treatment of van der Waals interactions using standard density
+functional theory methods with effective core-type potentials: Application to
+carbon-containing dimers},
+  year = {2008},
+  pages = {348-353}
+}
+
+@article{topiol_1976,
+  volume = {65},
+  journal = {J. Chem. Phys.},
+  author = {Topiol, Sid and Frost, Arthur A. and Ratner, Mark A. and Moskowitz, Jules W.},
+  title = {Use of pseudopotentials within the floating spherical Gaussian orbital},
+  year = {1976},
+  pages = {4467}
+}
+
 @article{dolg_relativistic_2012,
   volume = {112},
   shorttitle = {Relativistic {{Pseudopotentials}}},
